# fallout-badge

./: README.md
08ibai-fallout-badge/footprints.pretty/: Untitled.kicad_mod  XIAO-ESP32C3-DIP.kicad_mod
PCB_Fallout - Emefedez/: PCB_Fallout.kicad_pcb  PCB_Fallout.kicad_pro  temp-freerouting.dsn
badgePCB/: badgePCB.kicad_pcb  badgePCB.kicad_prl  badgePCB.kicad_pro  badgePCB.kicad_sch
badgePCB/production/: netlist.ipc  positions.csv
emefedez-fallout-badge/: PCB_Fallout.kicad_prl  freerouting.dsn  ~PCB_Fallout.kicad_pro.lck
firmware/: CMakeLists.txt  IMPLEMENTATION_NOTES.md  ImprovedPlan.md  Plan.md  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  badge_buttons.c  badge_buttons.h  badge_comms.c  badge_comms.h  badge_display.c  badge_display.h  badge_hardware.c  badge_hardware.h  badge_storage.c  badge_storage.h
other-SMCHDs/08ibai-fallout-badge/: badgePCB.kicad_pcb  badgePCB.kicad_prl  badgePCB.kicad_pro  badgePCB.kicad_sch  fp-lib-table
other-SMCHDs/emefedez-fallout-badge/: PCB_Fallout.kicad_sch
other-SMCHDs/raghav-fallout-badge/: raghav-fallout-badge.kicad_pcb  raghav-fallout-badge.kicad_pro
pegoku-badge-pcb/: README.md  pegoku-badge-pcb.kicad_pcb  pegoku-badge-pcb.kicad_prl  pegoku-badge-pcb.kicad_pro  pegoku-badge-pcb.kicad_sch  ~pegoku-badge-pcb.kicad_sch.lck
pegoku-badge-pcb/production/: bom.csv  designators.csv
raghav-fallout-badge/: raghav-fallout-badge.kicad_pcb  raghav-fallout-badge.kicad_prl  raghav-fallout-badge.kicad_sch
raghav-fallout-badge/production/: netlist.ipc
(+4 files in other folders)
